--- a/src/main/resources/templates/layout/layoutV2.html
+++ b/src/main/resources/templates/layout/layoutV2.html
@@ -14,7 +14,9 @@
   
   <!-- CSS, JS -->
    <link rel="stylesheet" href="/css/subscription.css">
+   <link rel="stylesheet" href="/css/dashboard.css">
    <script defer src="/js/subscription.js"></script>
+   <script defer src="/js/dashboard.js"></script>
    <script defer src="http://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
   
 </head>
@@ -23,6 +25,7 @@
   <div class="top">
     <a th:if="${session.loginUser} == null" href="#subscribe" class="top-menu" th:href="@{/register}">회원가입</a>
 	<a th:if="session.loginUser != null" class="top-menu" th:text="${session.loginUser != null ? session.loginUser.name + '님 환영합니다!': ''} "> sss</a>
+	<a th:if="${session.loginUser} != null" id="checkSubscriptionBtn" href="#subscribe" class="top-menu" th:href="@{/subscription/check}">| 대시보드 |</a>
     <a th:if="${session.loginUser} == null" href="#subscribe" class="top-menu" th:href="@{/login}">로그인</a>
     <a th:if="${session.loginUser} != null" href="#subscribe" class="top-menu" th:href="@{/logout}">로그아웃</a>
   </div>
