--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -44,7 +44,7 @@
 
 							<div class="signup-group">
 							<span class="signup-group"> 아직 회원이 아니십니까? <a href=""
-								th:href="@{/user/register}">회원 가입</a>
+								th:href="@{/register}">회원 가입</a>
 							</span>
 							</div>
 						</div>
