FEAT extension and user management

--- a/src/main/resources/templates/layout/layoutV1.html
+++ b/src/main/resources/templates/layout/layoutV1.html
@@ -15,6 +15,7 @@
   <!-- CSS , JS -->
    <link rel="stylesheet" href="/css/styles.css">
    <script defer src="/js/dashboard.js"></script>
+   <script defer src="/js/register.js"></script>
   
 </head>
 <body>
