--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,162 +1,217 @@
-body {
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
-}
-.top{
-display: flex;
-justify-content: end;
-}
-h1 a{
-	text-decoration:none;
-	color:#fff;
-}
-.top-menu{
-  font-size: 1em;
-  font-weight: 800;
-  text-decoration: none;
-  color:#fff;
-  margin-right: 10px;
-}
-
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
-}
-
-nav {
-  margin-top: 10px;
-}
-
-nav ul li {
-  display: inline;
-  margin-right: 20px;
-  border: 1px solid #fff;
-  padding: 10px 20px;
-}
-
-nav a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-}
-
-section {
-  padding: 40px;
-}
-
-#hero {
-  background-color: #f0f0f0;
-  text-align: center;
-  padding: 10%;
-
-}
-
-.hero-content {
-  max-width: 800px;
-  margin: auto;
-}
-
-.hero-content h1 {
-  color: #333;
-  font-size: 2em;
-}
-
-.cta-button {
-  display: inline-block;
-  background-color: #333;
-  color: #fff;
-  padding: 10px 20px;
-  margin-top: 20px;
-  text-decoration: none;
-  border-radius: 0px 15px 0px 15px;
+.container-fluid {
+	min-height: 100%;
+	position: relative;
+	padding-bottom: 60px;
 }
 
 footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 10px;
-  height: 50px;
-  width: 100%;
+	bottom: 0;
 }
-.text-danger{
-	color:red;
-	text-align:center;
+
+html, body {
+	height: 100%;
 }
-.container-fluid{
-	min-height:50vh;
-	max-height:80vh;
-	
+
+body {
+	font-family: 'Arial', sans-serif;
+	margin: 0;
+	padding: 0;
 }
-.form-group,h2{
-	   display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top:20px;
-            flex-direction: column;
+
+.top {
+	display: flex;
+	justify-content: end;
 }
-.form-group label{
+
+h1 a {
+	text-decoration: none;
+	color: #fff;
+}
+
+.top-menu {
+	font-size: 1em;
+	font-weight: 800;
+	text-decoration: none;
+	color: #fff;
+	margin-right: 10px;
+}
+
+header {
+	background-color: #333;
+	color: #fff;
+	padding: 10px;
+	text-align: center;
+}
+
+nav {
+	margin-top: 10px;
+}
+
+nav ul li {
+	display: inline;
+	margin-right: 20px;
+	border: 1px solid #fff;
+	padding: 10px 20px;
+}
+
+nav a {
+	text-decoration: none;
+	color: #fff;
+	font-weight: bold;
+}
+
+section {
+	padding: 40px;
+}
+
+#hero {
+	background-color: #f0f0f0;
+	text-align: center;
+	padding: 10%;
+}
+
+.hero-content {
+	max-width: 800px;
+	margin: auto;
+}
+
+.hero-content h1 {
+	color: #333;
+	font-size: 2em;
+}
+
+.cta-button {
+	display: inline-block;
+	background-color: #333;
+	color: #fff;
+	padding: 10px 20px;
+	margin-top: 20px;
+	text-decoration: none;
+	border-radius: 0px 15px 0px 15px;
+}
+
+footer {
+	background-color: #333;
+	color: #fff;
+	text-align: center;
+	padding: 10px;
+	height: 50px;
+	width: 100%;
+}
+
+.text-danger {
+	color: red;
+	text-align: center;
+}
+
+.container-fluid {
+	min-height: 50vh;
+	max-height: 80vh;
+}
+
+.register-form,.login-container {
+	margin: 0 auto;
+	width: 45%;
+	margin-top: 50px;
+}
+
+.form-group{
+	width:45%;
+	margin:20px;
+	padding-top:30px;
+	border-bottom:2px solid #adadad;
+	margin:0 auto;
+}
+.form-group, h2 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 20px;
+	flex-direction: column;
+}
+
+.form-group input {
+	font-size:20px;
+	width:100%;
+	height: 20px;
+	border:none;
+	outline:none;
 	margin-bottom:5px;
 }
-.form-group input{
-	height:20px;
-}
-.btn-group{
-	margin-top:50px;
+
+.confirmMsg-container{
+	margin:0 auto;
+	width:45%;
+	margin-top:10px;
 	text-align:center;
 }
-.btn-group input,
-.btn-group button{
-	width:5em;
-	font-size:1.2em;
-	margin-bottom:40px;
-	padding:10px;
+
+.login-header{
+	font-size:20px;
+	font-weight:600;
+	text-align:center;
+	padding-top:30px;
+}
+
+
+
+.btn-group {
+	margin-top: 50px;
+	text-align: center;
+}
+
+.btn-group input, .btn-group button {
+	width: 5em;
+	font-size: 1.2em;
+	margin-bottom: 40px;
+	padding: 10px;
 	border-radius: 0px 15px 0px 15px;
-	border:none;
-	background:#333;
-	color:white;
+	border: none;
+	background: #333;
+	color: white;
 }
-.btn-group input:hover,
-.btn-group button:hover,
-.cta-button:hover{
-	background:#666;
-	color:#fff;
+
+.btn-group input:hover, .btn-group button:hover, .cta-button:hover {
+	background: #666;
+	color: #fff;
 }
-.signup-group{
-	text-align:center;
+
+.signup-group {
+	text-align: center;
 }
-.signup-group a{
+.info-text {
+	margin-bottom:20px;
+}
+.signup-group a {
 	text-decoration: none;
-	color:#666;
-	border-top:1px solid black;
-	border-bottom:1px solid black;
-	padding:3px;
-	border-radius:0px 0px 5px 5px;
-}
-.signup-group a:hover{
-	background:black;
-	color:#fff;
+	color: #666;
+	border-bottom:2px solid #adadad;
+	padding: 3px;
+	border-radius: 0px 0px 5px 5px;
 }
 
-.login{
-    margin-top:20px;
-}
-.login a,
-.btn-group a{
-	text-decoration:none;
-	color:#fff;
+.signup-group a:hover {
+	background: #666;
+	color: #fff;
+	border-radius:15px;
 }
 
-.login button{
-	width:5em;
-	font-size:1em;
-	margin-bottom:30px;
-	padding:7px;
+.login {
+	margin-top: 20px;
+}
+
+.login a, .btn-group a {
+	text-decoration: none;
+	color: #fff;
+}
+
+.login button {
+	width: 5em;
+	font-size: 1em;
+	margin-bottom: 30px;
+	padding: 7px;
 	border-radius: 0px 15px 0px 15px;
-	border:none;
-	background:#333;
-	color:white;
+	border: none;
+	background: #333;
+	color: white;
 }
