--- a/src/main/resources/static/css/subscription.css
+++ b/src/main/resources/static/css/subscription.css
@@ -1,227 +1,229 @@
 body {
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
+	font-family: 'Arial', sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
 .top {
-  display: flex;
-  justify-content: end;
+	display: flex;
+	justify-content: end;
 }
 
 .top-menu {
-  font-size: 1em;
-  font-weight: 800;
-  text-decoration: none;
-  color: #fff;
-  margin-right: 10px;
+	font-size: 1em;
+	font-weight: 800;
+	text-decoration: none;
+	color: #fff;
+	margin-right: 10px;
 }
 
 header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
+	background-color: #333;
+	color: #fff;
+	padding: 10px;
+	text-align: center;
 }
 
 nav {
-  margin-top: 10px;
+	margin-top: 10px;
 }
 
 nav a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
+	text-decoration: none;
+	color: #fff;
+	font-weight: bold;
 }
 
 .container-fluid {
-  min-height: 50vh;
-  max-height: 80vh;
+	min-height: 50vh;
+	max-height: 80vh;
 }
 
 footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 10px;
-  height: 50px;
-  width: 100%;
+	background-color: #333;
+	color: #fff;
+	text-align: center;
+	padding: 10px;
+	height: 50px;
+	width: 100%;
 }
-
-
 
 .container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.8);
-  margin-top:100px;
-  margin-bottom:100px;
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 20px;
+	box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.8);
+	margin-top: 100px;
+	margin-bottom: 100px;
 }
 
-.container h1,
-.container h3{
-	text-align:center;
+.container h1, .container h3 {
+	text-align: center;
 }
 
 .subscription-options {
-  display: flex; 
-  
-}
-.first-td,
-.second-td{
-	width:90%;
-}
-.first-td{
-	font-weight:500;
+	display: flex;
 }
 
-.second-td{
-	border:1px solid black;
-	 box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.3);	
+.first-td, .second-td {
+	width: 90%;
 }
 
-h1 a{
-	text-decoration:none;
-	color:#fff;
+.first-td {
+	font-weight: 500;
+}
+
+.second-td {
+	border: 1px solid black;
+	box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.3);
+}
+
+h1 a {
+	text-decoration: none;
+	color: #fff;
 }
 
 .subscription-card {
-  width:33.3%;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 10px;
-  margin: 10px;
-  cursor: pointer;
+	width: 33.3%;
+	border: 1px solid #ccc;
+	border-radius: 8px;
+	padding: 10px;
+	margin: 10px;
+	cursor: pointer;
 }
 
 .subscription-table {
-  width: 100%;
-  text-align:center;
+	width: 100%;
+	text-align: center;
 }
 
-.subscription-table th{
-  font-size: 1.4em;
-  height:3em;
-  background: #333333af;
-  color:#fff;
-  box-shadow: 0 0 10px 5px rgba(144, 139, 139, 0.8);
+.subscription-table th {
+	font-size: 1.4em;
+	height: 3em;
+	background: #333333af;
+	color: #fff;
+	box-shadow: 0 0 10px 5px rgba(144, 139, 139, 0.8);
 }
+
 .subscription-table td {
-  display:inline-block;
-  margin:auto;
-  padding: 7px;
-  font-size:1.1em;
+	display: inline-block;
+	margin: auto;
+	padding: 7px;
+	font-size: 1.1em;
 }
+
 .selected-plan-info {
-  text-align:center;
-  /* margin-top: 20px; */
+	text-align: center;
+	/* margin-top: 20px; */
 }
-#openPopupBtn,
-.submitBtn,
-#cancelBtn{
+
+#openPopupBtn, .submitBtn, #cancelBtn {
 	padding: 10px 20px;
-  font-size: 16px;
-    background-color: #0e45ebb9;
-  color: white;
+	font-size: 16px;
+	background-color: #0e45ebb9;
+	color: white;
 }
+
 button {
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
 }
 
-#openPopupBtn:hover,
-.submitBtn:hover,
-#cancelBtn:hover{
-  background-color: #8383ee;
+#openPopupBtn:hover, .submitBtn:hover, #cancelBtn:hover {
+	background-color: #8383ee;
 }
 
-
-td select{
-	width:100px;
-	border-radius:5px;
-	text-align:center;
-	background:#666;
-	color:#fff;
+td select {
+	width: 100px;
+	border-radius: 5px;
+	text-align: center;
+	background: #666;
+	color: #fff;
 }
-
 
 /* 팝업창 */
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	display: none;
+}
 
-  .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            display: none;
-        }
+.popup {
+	width: 40vw;
+	height: auto;
+	background-color: #fff;
+	padding: 20px;
+	border-radius: 8px;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+	position: relative;
+	z-index: 1;
+	text-align: center;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
 
-        .popup {
-        	width:60vw;
-        	height:auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-            position: relative;
-            z-index: 1;
-            text-align: center;
-            position: fixed;
-    		top: 50%;
-    	    left: 50%;
-    		transform: translate(-50%, -50%);
-        }
+.close-btn {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+}
 
-        .close-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-        }
-        
-        
 /*팝업창 내부*/
-
-#form-container{
- display: flex;
-    justify-content: center; /* 수평 가운데 정렬 */
-    align-items: center; /* 수직 가운데 정렬 */
-    flex-direction:row;
-    flex-wrap:wrap;
-}
-#form-container h3{
-	text-align:center;
-	 height:3em;
-	 line-height:3em;
-  background: #333333af;
-  color:#fff;
-  box-shadow: 0 0 10px 5px rgba(144, 139, 139, 0.8);
-	padding:5px;
-}
-#form-container label,
-.addressBtn{
-	display:block;
-}
-.addressBtn{
-	margin:0 auto;
-}
-#required-info,
-#additional-info{
-	width:47%;
-	padding:5px;
-	min-height:340px;
-}
-#required-info select,
-#additional-info input {
-	text-align:center;
-   width:130px;
-   margin:7px 0px;
-   background:#666;
-   color:#fff;
+#form-container {
+	display: flex;
+	justify-content: center; /* 수평 가운데 정렬 */
+	align-items: center; /* 수직 가운데 정렬 */
+	flex-direction: row;
+	flex-wrap: wrap;
 }
 
-.submitBtn{margin-right:50px;}
-#cancelBtn{margin-left:50px;}
+#form-container h3 {
+	text-align: center;
+	height: 3em;
+	line-height: 3em;
+	background: #333333af;
+	color: #fff;
+	box-shadow: 0 0 10px 5px rgba(144, 139, 139, 0.8);
+	padding: 5px;
+}
+
+#form-container label, .addressBtn {
+	display: block;
+}
+
+.addressBtn {
+	margin: 0 auto;
+}
+
+#required-info, #additional-info {
+	width: 30%;
+	padding: 5px;
+	min-height: 340px;
+}
+
+#required-info select, #additional-info input {
+	text-align: center;
+	width: 150px;
+	margin: 7px 0px;
+	background: #666;
+	color: #fff;
+}
+#required-info select{
+	width:158px;
+	height:21px;
+}
+.submitBtn {
+	margin-right: 50px;
+}
+
+#cancelBtn {
+	margin-left: 50px;
+}
