--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -7,59 +7,53 @@
 	<title th:fragment="title">:: 회원 가입 ::</title>
 
 	<div class="container-fluid" th:fragment="content">
-
-		<h2 th:text="#{user.title.register}">회원 가입</h2>
-		<hr>
-
-		<form action="#" th:action="@{/register}" method="post" th:object="${users}" class="regForm">
-			<div class="form-group">
-				<label th:text="#{user.label.id}">아이디</label> <input type="text"
-					class="form-control" th:field="*{id}" >
-				<p th:errors="*{id}" th:class="text-danger">입력 오류메시지</p>
-			
-			</div>
-
-			<div class="form-group">
-				<label th:text="#{user.label.name}">이름</label> <input type="text"
-					class="form-control" th:field="*{name}">
-				<p th:errors="*{name}" th:class="text-danger">입력 오류메시지</p>
-			</div>
-
-			<div class="form-group">
-				<label th:text="#{user.label.password}">비밀번호</label> <input
-					type="password" class="form-control" th:field="*{password}">
-				<p th:errors="*{password}" th:class="text-danger">입력 오류메시지</p>
-			</div>
-
-			<div class="form-group">
-				<label th:text="#{user.label.email}">이메일</label> <input type="email"
-					class="form-control" th:field="*{email}">
-				<p th:errors="*{email}" th:class="text-danger">입력 오류메시지</p>
-			</div>
-
-			<div th:if="${#fields.hasGlobalErrors()}">
-				<p th:each="objectError : ${#fields.globalErrors()}"
-					th:class="text-danger" th:text="${objectError}">글로벌 오류 메시지</p>
-			</div>
-			
-			<div class="btn-group">
-			<input type="submit" value="가입" th:value="#{user.button.register}" class="register-btn">
-			<button  value="취소" ><a th:value="#{user.button.cancel}" class="cancel-btn" th:href="@{/}">취소</a></button>
-			</div>
-		</form>
-
-
-
-
+		<div class="register-form">
+			<h2 th:text="#{user.title.register}">회원 가입</h2>
+	
+			<form action="#" th:action="@{/register}" method="post" th:object="${users}" class="regForm">
+				<div class="form-group">
+					 <input type="text" class="form-control" th:field="*{id}" placeholder="아이디" id="userIdInput">
+				</div>
+				
+				<div class="confirmMsg-container">
+					<span class="idCheckMessage"></span>
+				</div>
+					<p th:errors="*{id}" th:class="text-danger">입력 오류메시지</p>
+				
+				<div class="form-group">
+					<input type="text" class="form-control" th:field="*{name}" placeholder="성함">
+				</div>
+					<p th:errors="*{name}" th:class="text-danger">입력 오류메시지</p>
+				
+				<div class="form-group">
+					<input type="password" class="form-control password" th:field="*{password}" placeholder="비밀번호">
+				</div>
+					<p th:errors="*{password}" th:class="text-danger">입력 오류메시지</p>
+				
+				<div class="form-group">
+					<input type="password" class="form-control confirmPassword"  placeholder="비밀번호 확인">
+				</div>
+				
+				<div class="confirmMsg-container">
+					<span class="confirmMsg"></span>
+				</div>
+				
+				<div class="form-group">
+					 <input type="email" class="form-control" th:field="*{email}" placeholder="이메일">
+				</div>
+					<p th:errors="*{email}" th:class="text-danger">입력 오류메시지</p>
+				
+				<div th:if="${#fields.hasGlobalErrors()}">
+					<p th:each="objectError : ${#fields.globalErrors()}"
+						th:class="text-danger" th:text="${objectError}">글로벌 오류 메시지</p>
+				</div>
+				
+				<div class="btn-group">
+					<input type="submit" value="가입" th:value="#{user.button.register}" class="register-btn">
+						<button  value="취소" ><a th:value="#{user.button.cancel}" class="cancel-btn" th:href="@{/}">취소</a></button>
+				</div>
+			</form>
+		</div>
 	</div>
-<script>
-let regBtn = document.querySelector('.regForm');
-
-regBtn.addEventListener('submit' , ()=> {
-  alert('회원가입이 완료되었습니다!');
-});
-</script>
-
 </th:block>
-
 </html>
