--- a/src/main/resources/static/css/finduser.css
+++ b/src/main/resources/static/css/finduser.css
@@ -8,32 +8,33 @@
 	border-bottom: 1px double #000;
 }
 
-#find-inner-form{
-	margin:0 auto;
-	width:50%;
+#find-inner-form {
+	margin: 0 auto;
+	width: 50%;
 	box-shadow: 0px 5px 10px 5px rgba(144, 139, 139, 0.8);
-	padding:5%;
-	margin-bottom:4%;
+	padding: 5%;
+	margin-bottom: 4%;
 	border-radius: 15px;
 }
-.input-box{
-	margin:0 auto;
-	width:53%;
-	border-bottom:2px solid #ababab;
-	margin-bottom:15px;
-}
-#find-inner-form input{
-	font-size:15px;
-	width:100%;
-	height: 15px;
-	border:none;
-	outline:none;
-	margin-bottom:5px;
+
+.input-box {
+	margin: 0 auto;
+	width: 53%;
+	border-bottom: 2px solid #ababab;
+	margin-bottom: 15px;
 }
 
-input[type="button"],
-button{
-  width: 7em;
+#find-inner-form input {
+	font-size: 15px;
+	width: 100%;
+	height: 15px;
+	border: none;
+	outline: none;
+	margin-bottom: 5px;
+}
+
+input[type="button"], button {
+	width: 7em;
 	font-size: 1em;
 	padding: 7px;
 	border-radius: 0px 15px 0px 15px;
@@ -42,11 +43,11 @@ button{
 	color: white;
 }
 
-input[type="button"]:hover,
-button:hover{
+input[type="button"]:hover, button:hover {
 	background: #666;
 	color: #fff;
 }
-.alertText{
-color:red;
+
+.alertText {
+	color: red;
 }
