--- a/src/main/resources/templates/layout/layoutV1.html
+++ b/src/main/resources/templates/layout/layoutV1.html
@@ -1,56 +1,47 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org" lang="ko">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 
 <th:block th:fragment="setContent(title, content)">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
-  <th:block th:replace="${title}">
-  	<title>기본 타이틀</title>
-  </th:block>
-  
-  
-  <!-- CSS , JS -->
-   <link rel="stylesheet" href="/css/styles.css">
-   <script defer src="/js/dashboard.js"></script>
-   <script defer src="/js/register.js"></script>
-  
-</head>
-<body>
-  <header>
-  <div class="top">
-    <a th:if="${session.loginUser} == null" href="#subscribe" class="top-menu" th:href="@{/register}">회원가입</a>
-	<a th:if="session.loginUser != null" class="top-menu" th:text="${session.loginUser != null ?  session.loginUser.name + '님 환영합니다 ': ''} "> sss</a>
-    <a th:if="${session.loginUser} != null" id="checkSubscriptionBtn" href="#subscribe" class="top-menu" th:href="@{/subscription/check}">| 대시보드 |</a>
-    <a th:if="${session.loginUser} == null" href="#subscribe" class="top-menu" th:href="@{/login}">로그인</a>
-    <a th:if="${session.loginUser} != null" href="#subscribe" class="top-menu" th:href="@{/logout}">로그아웃</a>
-  </div>
-    <h1><a th:href="@{/}">RM solution</a></h1>
-    <nav>
-      <ul>
-        <!-- <li><a href="#about">대시보드</a></li> -->
-      
-      </ul>
-    </nav>
-  </header>
-  
-  
-      <div class="container-fluid">
-      	<th:block th:replace="${content}"></th:block>
-      </div>
-      </div>
-      
-    <!-- /#page-content-wrapper -->
-  </div>
-  <!-- /#wrapper -->
+	<head>
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<footer>
-    <p>&copy; 2024 RM Solution. All rights reserved. </p>
-  </footer>
+<th:block th:replace="${title}">
+	<title>기본 타이틀</title>
+</th:block>
 
-</body>
+
+<!-- CSS , JS -->
+<link rel="stylesheet" href="/css/styles.css">
+<script defer src="/js/dashboard.js"></script>
+<script defer src="/js/register.js"></script>
+
+	</head>
+	<body>
+		<header>
+			<div class="top">
+				<a th:if="${session.loginUser} == null" href="#subscribe" class="top-menu" th:href="@{/register}">회원가입</a> 
+				<a th:if="session.loginUser != null" class="top-menu" th:text="${session.loginUser != null ?  session.loginUser.name + '님 환영합니다 ': ''} ">sss</a>
+				<a th:if="${session.loginUser} != null" id="checkSubscriptionBtn" href="#subscribe" class="top-menu"th:href="@{/subscription/check}">| 대시보드 |</a> 
+			 	<a th:if="${session.loginUser} == null" href="#subscribe" class="top-menu" th:href="@{/login}">로그인</a> 
+			 	<a th:if="${session.loginUser} != null" href="#subscribe" class="top-menu" th:href="@{/logout}">로그아웃</a>
+			</div>
+			<h1>
+				<a th:href="@{/}">RM solution</a>
+			</h1>
+		</header>
+
+		<div class="container-fluid">
+			<th:block th:replace="${content}"></th:block>
+		</div>
+
+		<footer>
+			<p>&copy; 2024 RM Solution. All rights reserved.</p>
+		</footer>
+
+	</body>
 
 </th:block>
 
